<resources>
    <string name="app_name">Fake News</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_filter">Фильровать:&#160;</string>
    <string name="type">Без фильтра</string>
    <string name="date">По дате</string>
    <string name="name">По автору</string>
    <string name="topic">По теме</string>
    <string name="No_filter">Без фильтра</string>
    <string name="topicForEd">Введите тему</string>
    <string name="AuthorForEd">Введите автора</string>
    <string name="dateForEd">Введите дату</string>
    <string name="load">Загрузить</string>
    <string name="save">Сохранить</string>
</resources>